# SaveParser

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
fom_saveparser/: __init__.py  _saveparser.py  settings.json
