[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
authors = [
    { name = "Christopher Mazzerbo", email = "christopher.mazzerbo@gmail.com"},
]
maintainers = [
    {name = "Christopher Mazzerbo", email = "christopher.mazzerbo@gmail.com"}
]
name = "fom-saveparser"
description = "Can parse FieldsOfMistria save files into easier to navigate web pages."
version = "0.1.0"
license = { file = "LICENSE" }
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">= 3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    'FiddleTools @ git+ssh://git@github.com/FoMTinkering/FiddleTools.git',
]

[project.scripts]
fom-saveparser-setvaultc = "fom_saveparser:set_vaultc_path"
fom-saveparser-extract = "fom_saveparser:extract_savedata"